bootstrap/templates/istio-gateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-gateway
  annotations:
    openshift.io/description: "Kubernetes Istio Gateway Shared"
    openshift.io/display-name: "Kubernetes Istio Gateway Shared"
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-shared
  namespace: istio-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
